--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="43200"> 
+    <meta http-equiv="refresh" content=""> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,7 +10,7 @@
 <body>
 
     <form action="" method="post">
-        <input  class="email" type="button" value="Send Email" onclick="sendEmail()">
+        <input  class="email" style="display: none;" type="button" value="Send Email" onclick="sendEmail()">
     </form>
     <div class="daily"></div>
    
